# Deck-Master

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  product-capability-manifest.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: .gitignore  README.md
docs/: 2026-05-21-ppt-library.md  2026-05-28-deck-master-web-preview-ui.md  2026-06-01-web-preview-ui-implementation-plan.md  2026-06-06-deck-master-orchestration-mvp.md  2026-06-06-demand-to-preview-autoplan.md  2026-06-06-external-tool-adapters.md  2026-06-06-slide-win-rate-feedback-mvp.md  2026-06-10-built-in-quality-gate.md  2026-06-10-guided-conversation-runtime.md  2026-06-10-office-hour-run-os.md  2026-06-10-planning-review-log.md  2026-06-10-run-os-mvp-confirmed-implementation-plan.md  2026-06-10-web-ui-design-spec.md  2026-06-11-deck-master-endgame-blueprint.md  2026-06-12-v09-5-review-cockpit-frontend-maturity-plan.md  2026-06-16-v0.9.11-wave2-release-note.md  2026-06-21-design-review-screenshot-audit-plan.md  2026-06-21-frontend-language-spec.md  2026-06-21-mainquest-web-ui-visual-alignment-spec.md  2026-06-21-run-state-data-contract-spec.md  2026-06-21-solution-project-workspace-ux-spec.md  2026-06-21-web-ui-design-spec-v0.2.md  2026-06-21-web-ui-ia-v1.md  2026-06-21-web-ui-iteration-spec.md  2026-06-21-web-ui-redesign-audit.md  Deck Master RUN OS MVP 方案评审.md  (+20 more)
(+663 files in other folders)
